Documentation: move graphic ressources in a shared directory.
    * doc/tutorial/gostai.pdf: Moved as doc/img/gostai.pdf.
    * doc/tutorial/urbi-logo.pdf: Moved as doc/img/urbi-logo.pdf.
    * doc/tutorial/img: New: link to shared ressources directory.
    * doc/tutorial/urbi-tutorial.tex: Adapt path.

--- a/doc/tutorial/urbi-tutorial.tex
+++ b/doc/tutorial/urbi-tutorial.tex
@@ -55,7 +55,7 @@
 
     \begin{figure}[htp]
       \centering
-      \includegraphics[width=12cm]{urbi-logo}
+      \includegraphics[width=12cm]{img/urbi-logo}
     \end{figure}
 
     \begin{center}
@@ -70,7 +70,7 @@
 
     \begin{figure}[htp]
       \centering
-      \includegraphics[width=12cm]{gostai}
+      \includegraphics[width=12cm]{img/gostai}
     \end{figure}
 
     \vfill
