--- a/doc/specs/urbi-specs.tex
+++ b/doc/specs/urbi-specs.tex
@@ -1,5 +1,8 @@
 \documentclass[openright,twoside,12pt]{report}
 
+% Number subsubsections
+\setcounter{secnumdepth}{3}
+
 % PACKAGES
 \usepackage{a4wide}
 \usepackage{afterpage}
